@@ -1,3 +1,8 @@
+2007-03-30  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add support for direct mounting by libfuse.  Fall back on
+	calling fusermount if it doesn't work
+
 2007-03-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.7.0-pre1
